--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
+  },
+  "dependencies": {
+    "bulma": "^0.7.1",
+    "dotenv": "^6.0.0",
+    "firebase": "^5.3.0",
+    "spinkit": "^1.2.5"
   }
 }
